# ci

./: .hlint.yaml  CHANGELOG.md  ci.cabal
app/: Main.hs
basetypes/: Ast.hs  Error.hs  ParserBase.hs  State.hs  Token.hs
interpreter/: Interpreter.hs
lexer/: Lexer.hs  old_lexer.txt
parser/: Parser.hs
test/: test-main.hs
