cabal-version:      2.4
name:               ci
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Sobell
maintainer:         sam.sobell@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library interpreter
    hs-source-dirs:  interpreter
    build-depends:  base ^>=4.14.3.0
                  , basetypes
                  , parser
    exposed-modules: Interpreter
    default-language: Haskell2010

library parser
    hs-source-dirs:  parser
    build-depends:  base ^>=4.14.3.0
                  , basetypes
    exposed-modules: Parser
    default-language: Haskell2010

library basetypes
    hs-source-dirs:  basetypes
    build-depends:  base ^>=4.14.3.0
    exposed-modules: Ast
                   , Error
                   , ParserBase
                   , State
                   , Token
    default-language: Haskell2010

library lexer
    hs-source-dirs:  lexer
    build-depends:  base ^>=4.14.3.0
                  , basetypes
                  , regex-base
                  , regex-tdfa
    exposed-modules:  Lexer
    default-language: Haskell2010

executable ci
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.3.0
                  , regex-base
                  , regex-tdfa
                  , lexer
                  , basetypes
                  , parser
                  , interpreter
    hs-source-dirs:   app
    default-language: Haskell2010
