cabal-version:      2.4
name:               ci
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Sobell
maintainer:         sam.sobell@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>=4.14.3.0
  ghc-options:
    -Wall -fllvm

library interpreter
    import: shared-properties
    hs-source-dirs:  interpreter
    build-depends:  basetypes
                  , parser
    exposed-modules: Interpreter

library parser
    import: shared-properties
    hs-source-dirs:  parser
    build-depends:   basetypes
    exposed-modules: Parser

library basetypes
    import: shared-properties
    hs-source-dirs:  basetypes
    exposed-modules: Ast
                   , Error
                   , ParserBase
                   , State
                   , Token

library lexer
    import: shared-properties
    hs-source-dirs:  lexer
    build-depends:  basetypes
    exposed-modules:  Lexer
    default-language: Haskell2010

executable ci
    import: shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.3.0
                  , lexer
                  , basetypes
                  , parser
                  -- , interpreter
    hs-source-dirs:   app
    default-language: Haskell2010
