cabal-version:      2.4
name:               ci
version:            0.2.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Sobell
maintainer:         sam.sobell@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>=4.14.3.0
  ghc-options:
    -Wall -fllvm

library interpreter
    import: shared-properties
    hs-source-dirs:  interpreter
    build-depends:  basetypes
                  , parser
    exposed-modules: Interpreter

library parser
    import: shared-properties
    hs-source-dirs:  parser
    build-depends:   basetypes
    exposed-modules: Parser

library basetypes
    import: shared-properties
    hs-source-dirs:  basetypes
    exposed-modules: Ast
                   , Error
                   , ParserBase
                   , State
                   , Token

library lexer
    import: shared-properties
    hs-source-dirs:  lexer
    build-depends:  basetypes
    exposed-modules:  Lexer
    default-language: Haskell2010

executable ci
    import: shared-properties
    main-is:          Main.hs
    build-depends:  base ^>=4.14.3.0
                  , lexer
                  , basetypes
                  , parser
                  , interpreter
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-ci
    import: shared-properties
    type:       exitcode-stdio-1.0
    main-is:    test-main.hs
    hs-source-dirs:  test
    default-language: Haskell2010
    build-depends: lexer
                 , parser
                 , basetypes
                 , interpreter
                 , base
                 , hspec
                 , QuickCheck
